# charucotest

./: README.md  build.gradle  build_run.sh  commit.b.sh  settings.gradle
app/src/main/java/charucotest/: App.java
app/src/test/java/charucotest/: AppTest.java
lib/opencv-460/org/opencv/aruco/: Aruco.java
lib/opencv-460/org/opencv/calib3d/: Calib3d.java
lib/opencv-460/org/opencv/img_hash/: Img_hash.java
lib/opencv-460/org/opencv/imgproc/: Imgproc.java
lib/opencv-460/org/opencv/ximgproc/: Ximgproc.java
lib/opencv-460/org/opencv/xphoto/: Xphoto.java
pyth/: build_tags.sh
pyth/barcodes/: datamtrix.py  qrcode_logo.py  qrcodetest.py
pyth/barcodes/aruco/: generate_aruco_tags.py  generation_aruco.py  pyproject.toml
pyth/board_card/: generate_board.py  pyproject.toml  testpdf.py
