[tool.poetry]
name = "aruco"
version = "0.1.0"
description = ""
authors = ["bussiere <bussiere@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-contrib-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
